<resources>
    <string name="app_name">SignInSingUpSettings</string>
    <string name="log_In">Log In</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_lynklocal">Welcome To LynkLocal</string>
    <string name="user_name">UserName</string>
    <string name="Password">Password</string>
    <string name="log_in">Log In</string>
    <string name="Register">Register</string>
    <string name="register">Register</string>
    <string name="e_mail">E-mail</string>
    <string name="submit">Submit</string>
    <string name="PAssword">Password</string>
    <string name="username">UserName</string>
    <string name="last_name">Last-Name</string>
    <string name="firs_tname">Firs-tName</string>
    <string name="password">Password</string>
    <string name="comfirm_password">Comfirm Password</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="measurement_system">Measurement System:</string>
    <string name="prefered_landmarks">Prefered Landmarks:</string>
    <string name="imperial_system">Imperial System</string>
    <string name="metric_system">Metric System</string>
    <string name="historical">Historical</string>
    <string name="modern">Modern</string>
    <string name="popular">Popular</string>
    <string name="narural">Narural</string>
    <string name="save">Save</string>
</resources>