<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="@color/purple_500"
    android:textAlignment="center">

    <TextView
        android:id="@+id/lblSettings"
        android:layout_width="148dp"
        android:layout_height="46dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="187dp"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/ckBoxDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSave"
        app:layout_constraintVertical_bias="0.34"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/lblLandMarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prefered_landmarks"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/rabBtnMetric"
        android:layout_width="147dp"
        android:layout_height="28dp"
        android:text="@string/metric_system"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27" />


    <RadioButton
        android:id="@+id/radBtnImperial"
        android:layout_width="144dp"
        android:layout_height="31dp"
        android:text="@string/imperial_system"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331" />

    <TextView
        android:id="@+id/lblMeasurement"
        android:layout_width="202dp"
        android:layout_height="22dp"
        android:text="@string/measurement_system"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/rbtnNatural"
        android:layout_width="146dp"
        android:layout_height="36dp"
        android:text="@string/narural"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/rbtnHistorical"
        android:layout_width="146dp"
        android:layout_height="36dp"
        android:text="@string/historical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.561"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/rbtnModern"
        android:layout_width="146dp"
        android:layout_height="36dp"
        android:text="@string/modern"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.624"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/rbtnPopular"
        android:layout_width="146dp"
        android:layout_height="36dp"
        android:text="@string/popular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.699"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="187dp"
        android:layout_height="42dp"
        android:text="@string/save"
        android:backgroundTint="#a1d286"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbtnPopular"
        app:layout_constraintVertical_bias="0.149"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>